<resources>
    <string name="app_name">QuanLyNhaHang</string>
    <string name="name">Đăng Ký Tài Khoản</string>
    <string name="user">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="checkpass">Xác nhận lại mật khẩu</string>
    <string name="man">Nam</string>
    <string name="women">Nữ</string>
    <string name="birth">Ngày sinh</string>
    <string name="code">Mã quản lý</string>
    <string name="Agree">Đồng ý</string>
    <string name="Cancel">Hủy bỏ</string>
    <string name="noCharTK">Bạn chưa điền tài khoản</string>
    <string name="noCharMK">Bạn chưa điền mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="namelogin">Tên đăng nhập</string>
    <string name="close">Thoát</string>
    <string name="regiter">Đăng ký</string>
    <string name="save">Lưu mật khẩu</string>
    <string name="home">Trang trủ</string>
    <string name="table">Bàn ăn</string>
    <string name="food">Món ăn</string>
    <string name="team">Nhân viên</string>
    <string name="set">Cài đặt</string>
    <string name="addTable">Thêm bàn ăn</string>
    <string name="setNameTable">Nhập tên bàn ăn thêm</string>
    <string name="ok">Xác nhận</string>
    <string name="nameFoodTable">Tên bàn ăn</string>
    <string name="addOk">Thêm thành công</string>
    <string name="notadd">Thêm không thành công</string>
    <string name="menu">Thực đơn</string>
    <string name="addmenu">Thêm thực đơn</string>
    <string name="namefood">Tên món ăn</string>
    <string name="price">Giá tiền</string>
    <string name="setMenuType">Nhập loại thực đơn</string>
    <string name="x">Vui lòng nhập dữ liệu</string>
    <string name="okk">OK</string>
    <string name="fix">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="successfuldelete">Xóa Thành Công</string>
    <string name="deletefailed">Xóa thất bại</string>
    <string name="successfulupdate">Sửa Thành Công</string>
    <string name="updatefailed">Sửa thất bại</string>
    <string name="name2">Nhập tên thay thế</string>
    <string name="addPeople">Thêm nhân viên</string>
    <string name="updateNV">Cập nhật nhân viên</string>
</resources>