<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgPeople"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/people2"
        android:contentDescription="@string/setNameTable" />

    <TextView
        android:id="@id/txtTenNhanVien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/imgPeople"
        android:textColor="@color/brown"
        android:text="@string/namelogin"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMaQl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTenNhanVien"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/imgPeople"
        android:text="@string/code"
        android:textColor="@color/green_2"
        android:textSize="19sp" />


</RelativeLayout>