<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".ThemMonAnActivity"
    android:layout_weight="1"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmenu"
        android:background="@color/white"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="400dp"
            android:id="@+id/imgHinhThucDon"
            android:src="@drawable/hamberger"
            android:contentDescription="@string/money" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:id="@+id/edTenMonAn"
                android:background="@drawable/custom_input"
                android:textColorHint="@color/black"
                android:layout_marginTop="60dp"
                android:hint="@string/namefood"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:id="@+id/edGiaTien"
                android:inputType="numberDecimal"
                android:background="@drawable/custom_input"
                android:textColorHint="@color/black"
                android:layout_marginTop="20dp"
                android:hint="@string/price"
                android:importantForAutofill="no" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgThemLoaiThucDon"
                    android:layout_width="74dp"
                    android:layout_height="61dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/addfoob"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:contentDescription="@string/setMenuType" />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnXNThemMenu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green_2"
            android:padding="15dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnHuyThemMenu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:padding="15dp"
            android:text="@string/Cancel"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spLoaiThucDon"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:theme="@style/Spinner"
        android:padding="20dp"
        android:spinnerMode="dropdown"
        android:layout_weight="1"
        tools:ignore="SpeakableTextPresentCheck" />


</LinearLayout>