<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edNhapLoaiTD"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:gravity="center"
        android:hint="@string/setMenuType"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green_2"
            android:id="@+id/btnXNThemLTD" />
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange"
            android:id="@+id/btnHuyThemLTD"
            android:padding="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>