<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".LoginActivity"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="start"
            android:id="@+id/imgBack"
            android:src="@drawable/back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/nhahag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="45dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edTenDN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/account"
            android:drawablePadding="10dp"
            android:hint="@string/namelogin"
            android:maxLines="1"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63" />

        <EditText
            android:id="@+id/edMatKhauĐN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/key"
            android:drawablePadding="10dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:checked="true"
                android:id="@+id/chkSavePass"
                android:layout_marginRight="200dp"
                android:text="@string/save"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDyDN"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green_2"
                android:padding="15dp"
                android:text="@string/login"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDangKy"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:padding="15dp"
                android:text="@string/regiter"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>