<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    >
    <EditText
        android:id="@+id/edNhapBanAnSua"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:gravity="center"
        android:hint="@string/name2"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnXNSua"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green_2"
            android:padding="10dp"
            android:text="@string/ok"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnHuySua"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange"
            android:padding="10dp"
            android:text="@string/Cancel"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>